policies/templates/restrict-capabilities.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: restrictcapabilities
spec:
  crd:
    spec:
      names:
        kind: RestrictCapabilities
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package admission
        forbidden_caps := {"NET_RAW", "SYS_ADMIN", "SYS_PTRACE", "KILL", "DAC_OVERRIDE"}
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          cap := container.securityContext.capabilities.add[_]
          forbidden_caps[cap]
          msg := sprintf("Forbidden Linux capability %v in container %v", [cap, container.name])
        }
